@@ -6,6 +6,8 @@ Changes
 * MmCorpus fix for Windows
 * LdaMallet supports printing/showing topics
 * fix LdaMallet bug when user specified a prefix (Victor, #184)
+* fix LdaMallet output when input is single vector (Suvir)
+* added LdaMallet unit tests
 * more py3k fixes (Lars Buitinck)
 * change order of LDA topic printing (Fayimora Femi-Balogun, #188)
 
